Closed Bug 1819882 Opened 2 years ago Closed 1 year ago

Crash in [@ nsBaseWidget::NotifyLiveResizeStarted] via nsWindow::ProcessMessageInternal

Categories

(Core :: Window Management, defect)

Unspecified
All
defect

Tracking

()

VERIFIED FIXED
121 Branch
Tracking Status
thunderbird_esr115 + fixed
firefox-esr115 121+ fixed
firefox119 --- wontfix
firefox120 --- fixed
firefox121 --- fixed

People

(Reporter: wsmwk, Assigned: mkmelin)

Details

(Keywords: crash, Whiteboard: [tbird crash][snnot3p])

Crash Data

Attachments

(2 files)

#3 crash for 111.0b1 (but exists in version 102, so not a new crash)

Crash report: https://crash-stats.mozilla.org/report/index/34ec3dda-e2f7-4782-8e6d-15b480230302

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0  xul.dll  nsBaseWidget::NotifyLiveResizeStarted  widget/nsBaseWidget.cpp:2011
1  xul.dll  nsWindow::ProcessMessageInternal  widget/windows/nsWindow.cpp:5874
2  xul.dll  static nsWindow::WindowProcInternal  widget/windows/nsWindow.cpp:4967
3  xul.dll  CallWindowProcCrashProtected  xpcom/base/nsCrashOnException.cpp:27
4  xul.dll  static nsWindow::WindowProc  widget/windows/nsWindow.cpp:4920
5  user32.dll  UserCallWinProcCheckWow  
6  user32.dll  DispatchClientMessage  
7  user32.dll  _fnINOUTLPRECT  
8  ntdll.dll  KiUserCallbackDispatch  
9  win32u.dll  NtUserMessageCall  

bp-d0f194bc-883a-4332-bba4-7a6ae0221103, according to the user comment, claims to be filelink related

bp-4bbd2059-8b9b-4d09-a59b-2eac90230302 stack is a little different
0 xul.dll nsBaseWidget::NotifyLiveResizeStarted() widget/nsBaseWidget.cpp:2195
1 xul.dll nsWindow::ProcessMessageInternal(unsigned int, unsigned long long&, long long&, long long*) widget/windows/nsWindow.cpp:5997
2 xul.dll nsWindow::ProcessMessage(unsigned int, unsigned long long&, long long&, long long*) widget/windows/nsWindow.cpp:5106
3 xul.dll nsWindow::WindowProcInternal(HWND__, unsigned int, unsigned long long, long long) widget/windows/nsWindow.cpp:5058
4 xul.dll CallWindowProcCrashProtected(long long (
)(HWND__, unsigned int, unsigned long long, long long), HWND__, unsigned int, unsigned long long, long long) xpcom/base/nsCrashOnException.cpp:27
5 xul.dll nsWindow::WindowProc(HWND__, unsigned int, unsigned long long, long long) widget/windows/nsWindow.cpp:4911
6 user32.dll UserCallWinProcCheckWow(_ACTIVATION_CONTEXT
, int64_t ()(tagWND, unsigned int, uint64_t, int64_t), HWND__, _WM_VALUE, uint64_t, int64_t, void, int)

Whiteboard: [snnot]
Whiteboard: [snnot] → [snnot3p]

two examples:

Flags: needinfo?(mkmelin+mozilla)

No ideas.

Flags: needinfo?(mkmelin+mozilla)

Believe I've just had this crash.
Using beta 120.0b5
Settings > General > Update History says installed/updated 11/11/2023 at 16:01:40
Started it up today at about 2pm - note thes are English British times not US.

I recall I did the following just prior to crash which occured approx 20 minutes after starting up.
Thunderbird beta started in 'Offline' mode.
I checked a couple of searches using 'Edit' > 'Find' > 'Search Messages'
After a while, I went to 'online' mode.
Info in Status Bar - downloading 1 of 3 messages to an imap account
I clicked icon to go back to 'offline' mode in the middle of this download.
Then checked a folder which was receiving the emails.
Clicked icon to go 'Online' to continue download which it performed.

Went AFK - checking xmas puddings !
Came back to discover crash:
Crash ID's
bp-b514f05e-dac5-4629-aec4-b01000231111
bp-6cb10f51-cee7-457e-a7ce-9c5dd0231111

Signature: [@ nsBaseWidget::NotifyLiveResizeStarted ]
Crash Reason EXCEPTION_ACCESS_VIOLATION_READ

Top ten frames:
0 xul.dll nsBaseWidget::NotifyLiveResizeStarted() widget/nsBaseWidget.cpp:2210 context
1 xul.dll nsWindow::ProcessMessageInternal(unsigned int, unsigned long long&, long long&, long long*) widget/windows/nsWindow.cpp:5616 cfi
2 xul.dll nsWindow::ProcessMessage(unsigned int, unsigned long long&, long long&, long long*) widget/windows/nsWindow.cpp:4777 cfi
3 xul.dll nsWindow::WindowProcInternal(HWND__, unsigned int, unsigned long long, long long) widget/windows/nsWindow.cpp:4729 cfi
4 xul.dll CallWindowProcCrashProtected(long long (
)(HWND__, unsigned int, unsigned long long, long long), HWND__, unsigned int, unsigned long long, long long) xpcom/base/nsCrashOnException.cpp:27 cfi
5 xul.dll nsWindow::WindowProc(HWND__, unsigned int, unsigned long long, long long) widget/windows/nsWindow.cpp:4682 cfi
6 user32.dll UserCallWinProcCheckWow(_ACTIVATION_CONTEXT
, int64_t ()(tagWND, unsigned int, uint64_t, int64_t), HWND__, _WM_VALUE, uint64_t, int64_t, void, int) cfi
7 user32.dll DispatchClientMessage cfi
8 user32.dll _fnINOUTLPRECT cfi
9 ntdll.dll KiUserCallbackDispatch cfi
10 win32u.dll NtUserMessageCall cfi

Checked error console contents

Component: General → Window Management
Product: Thunderbird → Core
Version: Thunderbird 111 → unspecified
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED

With version 115, Thunderbird crashes are very much on the rise. So thanks for this patch.

It is #27 crash for 115.4.2, so this is something we'd like to have uplifted to esr 115.

Two other bug reports with this signature: bug 1579807, bug 1737201

Whiteboard: [snnot3p] → [tbird crash][snnot3p]
Pushed by mkmelin@iki.fi: https://hg.mozilla.org/integration/autoland/rev/69230ff99fdf Fix crash in [@ nsBaseWidget::NotifyLiveResizeStarted] via nsWindow::ProcessMessageInternal. r=edgar
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 121 Branch

The patch landed in nightly and beta is affected.
:mkmelin, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox120 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(mkmelin+mozilla)

Comment on attachment 9363123 [details]
Bug 1819882 - Fix crash in [@ nsBaseWidget::NotifyLiveResizeStarted] via nsWindow::ProcessMessageInternal. r=edgar

Beta/Release Uplift Approval Request

  • User impact if declined: May crash
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Simple null check added
  • String changes made/needed: none
  • Is Android affected?: Unknown

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: Crash fix
  • User impact if declined: May crash
  • Fix Landed on Version: 121
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Simple null check added
Flags: needinfo?(mkmelin+mozilla)
Attachment #9363123 - Flags: approval-mozilla-esr115?
Attachment #9363123 - Flags: approval-mozilla-beta?

Comment on attachment 9363123 [details]
Bug 1819882 - Fix crash in [@ nsBaseWidget::NotifyLiveResizeStarted] via nsWindow::ProcessMessageInternal. r=edgar

Unfortunately we are out of betas, but will consider this if the opportunity arises for an RC re-spin or the planned dot release.

Attachment #9363123 - Flags: approval-mozilla-beta? → approval-mozilla-release?

Comment on attachment 9363123 [details]
Bug 1819882 - Fix crash in [@ nsBaseWidget::NotifyLiveResizeStarted] via nsWindow::ProcessMessageInternal. r=edgar

Approved for 120.0rc2

Attachment #9363123 - Flags: approval-mozilla-release? → approval-mozilla-release+

Comment on attachment 9363123 [details]
Bug 1819882 - Fix crash in [@ nsBaseWidget::NotifyLiveResizeStarted] via nsWindow::ProcessMessageInternal. r=edgar

Approved for 115.6esr.

Attachment #9363123 - Flags: approval-mozilla-esr115? → approval-mozilla-esr115+

Thunderbird beta 121 has no crashes after two weeks of stats, and prior crash rate of 5-6 per week. So I verify this is fixed in 121. Looking forward to 115.6.0. Thanks for the uplift to esr.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: