Bug 1819882 - Fix crash in [@ nsBaseWidget::NotifyLiveResizeStarted] via nsWindow::ProcessMessageInternal. r=edgar, a=dsmith

Don't allow nullptr into mLiveResizeListeners

Differential Revision: https://phabricator.services.mozilla.com/D193358